# youtube-to-mp3-tauri

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
scripts/: generate-icons.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: README.md
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  models.rs  state.rs  util.rs
src-tauri/src/commands/: mod.rs  settings.rs  video.rs
src/app/: App.tsx
src/lib/: tauri.ts  types.ts
src/styles/: globals.css
