[package]
name = "ytmp3_desktop"
version = "0.1.0"
description = "Desktop YouTube to MP3 prototype"
authors = ["Andrew"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "ytmp3_desktop_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
thiserror = "2"
url = "2"
uuid = { version = "1", features = ["serde", "v4"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
